--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import Header from "../components/Header.astro"
+import '@fontsource-variable/onest'
+---
 <!doctype html>
 <html lang="en">
 	<head>
@@ -8,15 +12,25 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
+		<Header />
 		<slot />
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+<style is:global>
+	:root{
+		color-scheme: light dark;
+	}
+	html
+	{
+		font-family: 'Onest Variable' ,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	}
+
+	body{
+		background: #050505;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		height: 100vh;
 	}
 </style>
