--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Badge from '../components/Badge.astro';
 			</h1>
 			<h2>
 				+1 año de experiencia. Desarrollador web Jr en formación y Editor de Videos. De 
-				La Rioja, Argentina. Apasionado por la creación y el diseño de aplicaciones web  
+				La Rioja, Argentina. Apasionado por la creación y el diseño de aplicaciones web.  
 			</h2>
 		</main>
 
