boton hacia linkedin

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,10 +10,15 @@ import Badge from '../components/Badge.astro';
 	<section class="w-full mx-auto lg:w-[740px] py-44">
 
 		<main>
-			<h1 class="text-white text-5xl font-bold">Hi, I am Octavio 
-				<Badge>Disponible para trabajar</Badge> 
+			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-4">
+				Hi, I am Octavio <a href="https://www.linkedin.com/in/octavio-moya/" 
+				target="_blank" 
+				class="flex justify-center items-center"
+				rel="noopener">
+					 <Badge>Disponible para trabajar</Badge> 
+				</a>
 			</h1>
-			<h2>
+			<h2 class="text-xl opacity-80">
 				+1 año de experiencia. Desarrollador web Jr en formación y Editor de Videos. De 
 				La Rioja, Argentina. Apasionado por la creación y el diseño de aplicaciones web.  
 			</h2>
