--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,3 +1,4 @@
-<span class="bg-green-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm dark:bg-green-900 dark:text-green-300">
+<span id="shine" class="bg-green-100 text-blue-400 text-sm font-medium 
+me-2 px-2.5 py-0.5 rounded-xl dark:bg-green-900 dark:text-black-300">
     <slot />
 </span>
