--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,11 +2,11 @@
 import '../styles/global.css'
 ---
 
-<header class="flex justify-between items-center py-3 w-[1120px]">
+<header class="flex justify-between items-center py-3 w-[1120px] mx-auto">
     <img class="rounded-full w-12 h-12 m-10" src="https://avatars.githubusercontent.com/u/65986931?v=4" alt="octavio photo">
     <nav class="flex flex-row gap-x-10 opacity-80">
         <a href="/">Home</a>
-        <a href="/about">About</a>
+        <a href="/about">About me</a>
         <a href="/projects">Projects</a>
         <a href="/contact">Contact</a>
     </nav>
