--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,6 +12,10 @@ import '@fontsource-variable/onest'
 		<title>Astro Basics</title>
 	</head>
 	<body>
+		<div class="relative h-full w-full bg-slate-950">
+			<div class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_500px_at_50%_200px,#3e3e3e,transparent)]"></div>
+		</div>
+
 		<Header />
 		<slot />
 	</body>
@@ -32,13 +36,28 @@ import '@fontsource-variable/onest'
 		flex-direction: column;
 		justify-content: center;
 	}
-	a {
+	/* a {
 		transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s;
 	}
 
 	a:hover {
 		transform: scale(1.1);
 		opacity: 1;
+	} */
+	#shine{
+		background: linear-gradient(110deg,#032b7c,45%,#023dff,55%,#032b7c);
+		background-size: 200% 100%;
+		animation: shine-background 2.5s ease-in-out infinite;
 	}
-	
+
+	@keyframes shine-background {
+			from: {
+				background-position: 0 0;
+			}
+
+			to {
+				background-position: -200% 0;
+			}
+		}
+
 </style>
