--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,19 +1,27 @@
 ---
 import Header from "../components/Header.astro"
 import '@fontsource-variable/onest'
+
+interface Props {
+	title: string,
+}
+
+const { title } = Astro.props
 ---
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="Astro-description" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
 	<body>
-		<div class="relative h-full w-full bg-slate-950">
-			<div class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_500px_at_50%_200px,#3e3e3e,transparent)]"></div>
+		<div 
+			class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 
+			[background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]">
+			
 		</div>
 
 		<Header />
@@ -31,7 +39,6 @@ import '@fontsource-variable/onest'
 	}
 
 	body{
-		background: #050505;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
