--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,9 +4,9 @@ import '../styles/global.css'
 
 <header class="flex justify-center items-center py-3 mt-3 w-[1120px] mx-auto">
     <nav class="flex flex-row gap-x-10 opacity-80">
-        <a href="/">Inicio</a>
-        <a href="/about">Sobre mí</a>
-        <a href="/projects">Proyectos</a>
-        <a href="/contact">Contacto</a>
+        <a href="#top">Inicio</a>
+        <a href="#sobre-mi">Sobre mí</a>
+        <a href="#proyectos">Proyectos</a>
+        <a href="#contacto">Contacto</a>
     </nav>
 </header>
