--- a/src/components/ProjectsItems.astro
+++ b/src/components/ProjectsItems.astro
@@ -4,14 +4,32 @@ interface Props {
     title: string;
     description: string;
     link?: string;
+    tags?: {
+        name: string;
+        class: string;
+        icon: any; // Icon component
+    }[];
 }
 
-const { title, description, link } = Astro.props;
+const { title, description, link, tags = [] } = Astro.props;
 ---
 
-<div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
-        <h3 class="text-lg font-semibold text-gray-900 dark:text-white">{title}</h3>
-        <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">{description}</p>
+<div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-white-900 dark:bg-white-700"></div>
+        <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-4">{title}</h3>
+        <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400 text-pretty">{description}</p>
+        { tags.length > 0 && (
+                    <ul class="flex gap-2 mt-2">
+                        {tags.map(tag => (
+                            <li>
+                                <span class={`inline-flex items-center px-2 py-1 text-xs font-medium rounded-full mb-4 ${tag.class}`}>
+                                    <tag.icon class="w-3 h-3 me-1" />
+                                    {tag.name}
+                                </span>
+                            </li>
+                        ))}
+                    </ul>
+                ) }
+
         {link && (
             <a href={link} 
             class="inline-flex items-center px-4 py-2 text-sm font-medium 
