--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -1,3 +1,7 @@
-<section class={`w-full mx-auto lg:w-[740px] ${Astro.props.class}`}>
+---
+const { class: className, id } = Astro.props;
+---
+
+<section id={id} class={`w-full mx-auto lg:w-[740px] ${className}`}>
 	<slot />
 </section>
