--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/Header.astro"
 import '@fontsource-variable/onest'
+import Footer from "../components/Footer.astro"
 
 interface Props {
 	title: string,
@@ -26,6 +27,7 @@ const { title } = Astro.props
 
 		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 
@@ -35,6 +37,7 @@ const { title } = Astro.props
 	}
 	html
 	{
+		scroll-behavior: smooth;
 		font-family: 'Onest Variable' ,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	}
 
@@ -64,6 +67,12 @@ const { title } = Astro.props
 
 			to {
 				background-position: -200% 0;
+			}
+		}
+
+		@media (prefers-reduced-motion: reduce) {
+			html {
+				scroll-behavior: auto;
 			}
 		}
 
