About-me listo, faltan algunas cosas

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -10,7 +10,7 @@ import BootstrapIcon from '../icons/Bootstrap.astro';
 const tags = {
     ASTRO: {
         name: "Astro",
-        class: "bg-black-800 text-white",
+        class: "bg-black text-white",
         icon: AstroIcon
     },
     TAILWIND: {
