--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import MailIcon from '../icons/Mail.astro';
 import ProjectsLine from '../components/Projects.astro';
 import SectionContainer from '../components/SectionContainer.astro';
 import CodeIcon from '../icons/Code.astro';
+import About from '../components/About.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -53,5 +54,9 @@ import CodeIcon from '../icons/Code.astro';
 			</h2>
 			<ProjectsLine />
 		</SectionContainer>
+			<SectionContainer class="py-36">
+				<About id="sobre-mi"/>
+			</SectionContainer>
+
 	</main>
 </Layout>
