--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,15 +1,17 @@
-
+---
+const { id } = Astro.props;
+---
 
 <footer class="rounded-lg shadow-sm m-4 bg-black/20 backdrop-blur-lg">
     <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"><a href="https://flowbite.com/" class="hover:underline">Octavio</a>
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">©<a href="https://www.linkedin.com/in/octavio-moya/" target="_blank" class="hover:underline"> Octavio</a>
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
         <li>
-            <a href="#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mi</a>
+            <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mi</a>
         </li>
         <li>
-            <a href="#contacto" class="hover:underline">Contacto</a>
+            <a href="mailto:octaviomoya05@gmail.com" class="hover:underline">Contacto</a>
         </li>
     </ul>
     </div>
