footer agregado y terminado, faltan detalles

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,6 +7,6 @@ import '../styles/global.css'
         <a href="#top">Inicio</a>
         <a href="#sobre-mi">Sobre mí</a>
         <a href="#proyectos">Proyectos</a>
-        <a href="#contacto">Contacto</a>
+        <a href="mailto:octaviomoya05@gmail.com">Contacto</a>
     </nav>
 </header>
