--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,9 +2,10 @@
 const { id } = Astro.props;
 ---
 
-<footer class="rounded-lg shadow-sm m-4 bg-black/20 backdrop-blur-lg">
-    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">©<a href="https://www.linkedin.com/in/octavio-moya/" target="_blank" class="hover:underline"> Octavio</a>
+<footer class="opacity-70 rounded-full mt-16 shadow-sm m-4 bg-black/10 flex max-w-4xl 
+                justify-center mx-auto container w-full backdrop-blur-3xl mb-10">
+    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between py-4">
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025<a href="https://www.linkedin.com/in/octavio-moya/" target="_blank" class="hover:underline"> Octavio</a>
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
         <li>
