--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -42,7 +42,7 @@ const project = [
         description: 
         `Es un programa desarrollado en C + + con Qt para gestionar los clientes y las ventas de un cine. 
         Permite registrar clientes, empleados y películas, usando archivos CSV para almacenamiento.`,
-        link: "#"
+        link: "https://github.com/moyeta-tech/Cine"
     }, 
     {
         title: "Pagina de Libros sobre Programación con Astro y Tailwind CSS",
@@ -50,7 +50,7 @@ const project = [
         `Es una página en la que hay algunos libros de programación y se puede interactuar con ellos, ya sea para saber 
         más información que a su vez también tiene un enlace de compra que te redirige a Amazon para poder 
         comprarlo.`,
-        link: "#",
+        link: "https://github.com/moyeta-tech/dev-Books",
         tags: [tags.ASTRO, tags.TAILWIND]
     },
     {
