--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,11 +19,11 @@ const { title } = Astro.props
 		<title>{title}</title>
 	</head>
 	<body>
-		<!-- <div 
-			class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 
+		 <div 
+			class="fixed inset-0 -z-10 min-h-screen w-full items-center px-5 py-24 
 			[background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]">
 			
-		</div> -->
+		</div> 
 
 		<Header />
 		<slot />
@@ -45,6 +45,8 @@ const { title } = Astro.props
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+		min-height: 100vh;
+		overscroll-behavior: none;
 	}
 	/* a {
 		transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s;
@@ -75,5 +77,6 @@ const { title } = Astro.props
 				scroll-behavior: auto;
 			}
 		}
+		
 
 </style>
