--- a/src/components/ProjectsItems.astro
+++ b/src/components/ProjectsItems.astro
@@ -14,7 +14,7 @@ interface Props {
 const { title, description, link, tags = [] } = Astro.props;
 ---
 
-<div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-white-900 dark:bg-white-700"></div>
+<div class="absolute w-3 h-3 bg-blue-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-blue-900 dark:bg-blue-700"></div>
         <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-4">{title}</h3>
         <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400 text-pretty">{description}</p>
         { tags.length > 0 && (
