Link de proyecto bazardito actualizado

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -59,7 +59,7 @@ const project = [
         `Junto con mi grupo de la universidad, preparamos una aplicación web que sirve para gestionar el stock de una 
         tienda de productos electrónicos, permitiéndonos agregar, eliminar, modificar y ver la información de 
         productos, clientes y pedidos. Lo realizamos para presentar como trabajo final en la materia de base de datos.`,
-        link: "https://bazardito.onrender.com/",
+        link: "https://basedatos-ie98.onrender.com/",
         tags: [tags.EXPRESS, tags.MONGODB, tags.BOOTSTRAP]
     }
         ]
