--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,8 +2,8 @@
 import '../styles/global.css'
 ---
 
-<header class="flex justify-center items-center py-3 mt-3 w-[1120px] mx-auto">
-    <nav class="flex flex-row gap-x-10 opacity-80">
+<header class="flex justify-center items-center py-3 sticky top-0 z-50 w-[1120px] mx-auto">
+    <nav class="flex flex-row gap-x-10 opacity-80 border-1 text-white backdrop-blur-[100px] border-none rounded-full p-2">
         <a href="#top">Inicio</a>
         <a href="#sobre-mi">Sobre mí</a>
         <a href="#proyectos">Proyectos</a>
